test/mpi/errors/pt2pt/Makefile.sm
INCLUDES = -I../../include -I${srcdir}/../../include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

# Use extra programs to list programs that should not be built by default.
EXTRA_PROGRAMS       = 

proberank_SOURCES    = proberank.c
truncmsg1_SOURCES    = truncmsg1.c
truncmsg2_SOURCES    = truncmsg2.c
errinstatts_SOURCES  = errinstatts.c
errinstatta_SOURCES  = errinstatta.c
errinstatws_SOURCES  = errinstatws.c
errinstatwa_SOURCES  = errinstatwa.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o)
